@startuml state_project
title States — Project Lifecycle (controlled state machine)

skinparam shadowing false
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam stateBackgroundColor #FFFFFF
skinparam stateBorderColor #808080
skinparam ArrowColor #333333
skinparam noteBorderColor #AAAAAA
skinparam noteBackgroundColor #FAFAFA

[*] --> DRAFT : creation

DRAFT --> ACTIVE : start
DRAFT --> CANCELLED : abandon

ACTIVE --> ON_HOLD : suspend
ON_HOLD --> ACTIVE : resume

ACTIVE --> COMPLETED : delivery complete
ACTIVE --> CANCELLED : termination
ON_HOLD --> CANCELLED : termination

COMPLETED --> [*]
CANCELLED --> [*]

note right of COMPLETED
  Archiving is a flag, not a state.
end note

note bottom of DRAFT
  Any other transition is rejected (HTTP 422).
end note

@enduml
